--- a/gestion/ofertas/index.html
+++ b/gestion/ofertas/index.html
@@ -26,7 +26,7 @@
 
     <h2>Gestión de Ofertas</h2>
     <button onclick="window.location.href='../'">🔙 Volver</button>
-    <button onclick="window.location.href='crear.html'">➕ Crear Oferta</button>
+    <button onclick="window.location.href='creator.html'">➕ Crear Oferta</button>
 
     <h3>Ofertas Existentes</h3>
     <table>
